# ontio-js-vm

./: Cargo.toml
gc/: .cargo_vcs_info.json  Cargo.toml
gc/src/: gc.rs
src/lib/: exec.rs  lib.rs
src/lib/js/: mod.rs  object.rs  string.rs  value.rs
src/lib/syntax/: lexer.rs  parser.rs
src/lib/syntax/ast/: constant.rs  token.rs
