[package]
name = "boa"
version = "0.3.0"
authors = ["Jason Williams <jase.williams@gmail.com>"]
description = "Boa is a Javascript lexer, parser and Just-in-Time compiler written in Rust. Currently, it has support for some of the language."
homepage = "https://github.com/jasonwilliams/boa"
repository = "https://github.com/jasonwilliams/boa"
keywords = ["javascript", "compiler", "lexer", "parser", "js"]
license = "Unlicense/MIT"
exclude = [".vscode/*", "Dockerfile", "Makefile", ".editorConfig"]
edition = "2018"


[dependencies]
gc = {path="./gc"}
gc_derive = "^0.3.2"
#serde_json = "^1.0.40"
rand = "^0.7.0"
chrono = "^0.4.8"

[dependencies.regex]
version = "^1.3.0"
features=["std"]

[dependencies.ontio-std]
git="https://github.com/ontio/ontology-wasm-cdt-rust"
features = ["std"]

[dev-dependencies]
criterion = "^0.3.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "boa"
path = "src/lib/lib.rs"

[[bench]]
name = "string"
harness = false
